# mt-copy-tools

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  requirements-win.txt
mt-copy-tools-cs/: README.md  go.mod  main.go
mt_copy_tools/: cli.py  sftp.py
mt_copy_tools/mtput/: __init__.py  __main__.py
mt_copy_tools/mtscp/: __init__.py  __main__.py
