[tool.poetry]
name = "mt-copy-tools"
version = "0.1.0"
description = "Multi-thread copy tools"
authors = ["Dmitry Pisarev <sorra7@gmail.com>"]

[tool.poetry.scripts]
mtscp = 'mt_copy_tools.mtscp:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
paramiko = "^2.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.build.dependencies]
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
